lab1/Test/L1-A-8-80.cmm
float VQlSDbLy88f2nZ ( ) {
  struct qPk {
    int gU5pTkk8MCqOm ;
  }cLg [ 928144613 ] = P5t8kHW96AL07br = nB || e != 
    - ! o < [ OIN && OLn4mIc < tOX9ZkMaunbpg3E339E - MEljrt75z2P2yPFwE 
    * ! RAcB3PM_VEUdlgCBF88g ( TqDUVX , vTWntamWTwkzaHDMtndd 
    = BaZT22dQBGQ_PyCV || EgoNPXX3WWFaMSYsTi > csLTvY_jNrOWT5 
    + SFGCyP1SLcBO * ZyhcPq7NEDX9ue9IF ( tONYI5 , QZN7V1JCMqt0 
    && WxMODH7stI == - ( UXa >= q8cuIprz3dqko ) <= - - 
    - - 1541493146.1733250290 ) * 1469252531 ) ] / SfLG 
    ( ) . Gu6zuAa0Fnr6GQ , kGOIf ;
> }
struct {
  int aJYVHQH6dJYAsrKD ;
};
struct YOmE7l1aLg8E jcqQcqfT , rpUqelZjNkS47Bo 

;
int DM9NS ( int TfTBSy2iHh ) {
  bDBlrKdPmynRAYNXY1r ;
  fPTjKvLiGTdF1Xd ;
  if ( RI2lLn )   CjNHrZ8K4 ;
else   if ( BZjvy7YyKNB )   QFVuo06zC8sIEEftMcoQ ;


  d2GVpsbBJlWhBo ;
  if ( ipZJNH )   _ ;
else {
  }
  if ( LZiH5GXGeeIRSF_P5 )   while ( KYTO0YNmL0 ( 
    )   return GXPYYGOxuI8odiRFDf4 ;


  OFO9epG ;
}
int hxMpce9PnQFT ( int LVPZ , int B6jq_d4 ) {
}
